@@ -1,7 +1,12 @@
 2010-12-20 Maarten Brock <sourceforge.brock AT dse.nl>
 
+	* debugger/mcs51/simi.c (waitForSim): implemented timeout,
+	  (openSimulator): use non-blocking socket mode
+
+2010-12-20 Maarten Brock <sourceforge.brock AT dse.nl>
+
 	* debugger/mcs51/cmd.c (commonSetUserBp): fixed bug 1185014
-	
+
 2010-12-19 Borut Razem <borut.razem AT siol.net>
 
 	* src/ds390/main.c, src/Makefile.in, src/SDCCbuild_cmd.c,
